Python101.ipynb commit

--- a/RecSys-Materials/GettingStarted/Python101.ipynb
+++ b/RecSys-Materials/GettingStarted/Python101.ipynb
@@ -41,9 +41,7 @@
     "        print(number, \"is even\")\n",
     "    else:\n",
     "        print(number, \"is odd\")\n",
-    "        \n",
-    "print (\"All done.\")\n",
-    "        "
+    "print (\"All done.\")"
    ]
   },
   {
