--- a/RecSys-Materials/GettingStarted/Python101.ipynb
+++ b/RecSys-Materials/GettingStarted/Python101.ipynb
@@ -41,7 +41,7 @@
     "        print(number, \"is even\")\n",
     "    else:\n",
     "        print(number, \"is odd\")\n",
-    "print (\"All done.\")"
+    "print (\"All done.\")\n"
    ]
   },
   {
@@ -734,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
